Optimization all files

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <a href="/"><span>WEB</span>STUDIO</a>
         <nav>
             <ul>
-                <li><a href="">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
@@ -25,60 +25,56 @@
     <main>
         <!-- section-1 -->
         <ul>
-            <li><button>All</button></li>
-            <li><button>Web Site</button></li>
-            <li><button>App</button></li>
-            <li><button>Design</button></li>
-            <li><button>Marketing</button></li>
+            <li><button type="button">All</button></li>
+            <li><button type="button">Web Site</button></li>
+            <li><button type="button">App</button></li>
+            <li><button type="button">Design</button></li>
+            <li><button type="button">Marketing</button></li>
         </ul>
-        <!-- <h2>Gallery</h2> -->
+        <h2 hidden>Gallery</h2>
         <ul>
             <li>
-                <img src="./images/image_8.jpg" alt="Pic of Gallery - 1" width="360">
+                <img src="./images/image_8.jpg" alt="pic-of-gallery-1" width="360">
                 <h3>Banking App Interface Concept</h3>
                 <p>App</p>
             </li>
             <li>
-                <img src="./images/image_9.jpg" alt="Pic of Gallery - 2" width="360">
+                <img src="./images/image_9.jpg" alt="pic-of-gallery-2" width="360">
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/image_10.jpg" alt="Pic of Gallery - 3" width="360">
+                <img src="./images/image_10.jpg" alt="pic-of-gallery-3" width="360">
                 <h3>Meditaion App</h3>
                 <p>App</p>
             </li>
-        </ul>
-        <ul>
             <li>
-                <img src="./images/image_11.jpg" alt="Pic of Gallery - 4" width="360">
+                <img src="./images/image_11.jpg" alt="pic-of-gallery-4" width="360">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/image_12.jpg" alt="Pic of Gallery - 5" width="360">
+                <img src="./images/image_12.jpg" alt="pic-of-gallery-5" width="360">
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
             </li>
             <li>
-                <img src="./images/image_13.jpg" alt="Pic of Gallery - 6" width="360">
+                <img src="./images/image_13.jpg" alt="pic-of-gallery-6" width="360">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
             </li>
-        </ul>
-        <ul>
             <li>
-                <img src="./images/image_14.jpg" alt="Pic of Gallery - 7" width="360">
+                <img src="./images/image_14.jpg" alt="pic-of-gallery-7" width="360">
                 <h3>Instagram Stories Concept</h3>
                 <p>Design</p>
             </li>
             <li>
-                <img src="./images/image_15.jpg" alt="Pic of Gallery - 8" width="360">
+                <img src="./images/image_15.jpg" alt="pic-of-gallery-8" width="360">
                 <h3>Organic Food</h3>
                 <p>Web Site</p>
             </li>
             <li>
-                <img src="./images/image_16.jpg" alt="Pic of Gallery - 9" width="360">
+                <img src="./images/image_16.jpg" alt="pic-of-gallety-9" width="360">
                 <h3>Fresh Coffee</h3>
                 <p>Web Site</p>
             </li>
