--- a/index.html
+++ b/index.html
@@ -1,100 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Studio</title>
+  </head>
+  <body>
     <header>
-        <a href="/"><span>WEB</span>STUDIO</a>
-        <nav>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
+      <a href="/"><span>WEB</span>STUDIO</a>
+      <nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+      </ul>
     </header>
 
+    <!-- Hero -->
     <main>
-        <!-- section-1 -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button>Order Service</button>
-        </section>
-        <!--section-2-->
-        <section>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies </h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li>
-                    <img src="./images/image_1.jpg" alt="pic_1" width="360">
-                </li>
-                <li>
-                    <img src="./images/image_2.jpg" alt="pic_2" width="360">
-                </li>
-                <li>
-                    <img src="./images/image_3.jpg" alt="pic_3" width="360">
-                </li>
-            </ul>
-        </section>
-        <!-- section-3 -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/image_4.jpg" alt="mark_guererro" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/image_5.jpg" alt="tom_ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/image_6.jpg" alt="camila_garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/image_7.jpg" alt="daniel_wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <!-- section-1 -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>
+      </section>
+      <!--section-2-->
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./images/image_1.jpg" alt="pic_1" width="360" />
+          </li>
+          <li>
+            <img src="./images/image_2.jpg" alt="pic_2" width="360" />
+          </li>
+          <li>
+            <img src="./images/image_3.jpg" alt="pic_3" width="360" />
+          </li>
+        </ul>
+      </section>
+      <!-- section-3 -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/image_4.jpg" alt="mark_guererro" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/image_5.jpg" alt="tom_ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/image_6.jpg" alt="camila_garcia" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/image_7.jpg" alt="daniel_wilson" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-        <a href="/"><span>WEB</span>STUDIO</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a href="/"><span>WEB</span>STUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
