--- a/index.html
+++ b/index.html
@@ -4,67 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <a href="/"><span>WEB</span>STUDIO</a>
+    <header class="header">
+      <a class="header-logo" href="/"><span>WEB</span>STUDIO</a>
       <nav>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="header-list">
+          <li><a class="header-link" href="">Studio</a></li>
+          <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+      <ul class="header-list">
+        <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-contact" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
     <!-- Hero -->
     <main>
       <!-- section-1 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+      <section class="order">
+        <h1 class="order-title">Effective Solutions for Your Business</h1>
+        <button class="order-button" type="button">Order Service</button>
       </section>
       <!--section-2-->
-      <section>
-        <ul>
+      <section class="benefits">
+        <ul class="benefits-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="benefits-title">Strategy</h3>
+            <p class="benefits-decription">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="benefits-title">Punctuality</h3>
+            <p class="benefits-decription">
               Bring the key message to the brand's audience for the best price
-              within the shortest possible time
+              within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="benefits-title">Diligence</h3>
+            <p class="benefits-decription">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="benefits-title">Technologies</h3>
+            <p class="benefits-decription">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="work">
+        <h2 class="work-title">What are we doing</h2>
+        <ul class="work-list">
           <li>
             <img src="./images/image_1.jpg" alt="pic_1" width="360" />
           </li>
@@ -77,36 +84,36 @@
         </ul>
       </section>
       <!-- section-3 -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/image_4.jpg" alt="mark_guererro" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member">Mark Guerrero</h3>
+            <p class="team-job">Product Designer</p>
           </li>
           <li>
             <img src="./images/image_5.jpg" alt="tom_ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member">Tom Ford</h3>
+            <p class="team-job">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/image_6.jpg" alt="camila_garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member">Camila Garcia</h3>
+            <p class="team-job">Marketing</p>
           </li>
           <li>
             <img src="./images/image_7.jpg" alt="daniel_wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member">Daniel Wilson</h3>
+            <p class="team-job">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="/"><span>WEB</span>STUDIO</a>
-      <p>
+    <footer class="footer">
+      <a clas="footer-logo" href="/"><span>WEB</span>STUDIO</a>
+      <p class="footer-abstract">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
