--- a/portfolio.html
+++ b/portfolio.html
@@ -1,89 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <title>Portfolio</title>
-</head>
-<body>
-    <header>
-        <a href="/"><span>WEB</span>STUDIO</a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-        </ul>  
-    </header>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+    <a class="header-logo" href="/"><span>WEB</span>STUDIO</a>
+    <nav>
+      <ul class="header-list">
+        <li><a class="header-link" href="">Studio</a></li>
+        <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+        <li><a class="header-link" href="">Contacts</a></li>
+      </ul>
+    </nav>
+    <ul>
+      <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="header-contact" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+    </ul>
+  </header>
 
     <main>
-        <!-- section-1 -->
-        <ul>
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
-        </ul>
-        <h2 hidden>Gallery</h2>
-        <ul>
-            <li>
-                <img src="./images/image_8.jpg" alt="pic-of-gallery-1" width="360">
-                <h3>Banking App Interface Concept</h3>
-                <p>App</p>
-            </li>
-            <li>
-                <img src="./images/image_9.jpg" alt="pic-of-gallery-2" width="360">
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/image_10.jpg" alt="pic-of-gallery-3" width="360">
-                <h3>Meditaion App</h3>
-                <p>App</p>
-            </li>
-            <li>
-                <img src="./images/image_11.jpg" alt="pic-of-gallery-4" width="360">
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/image_12.jpg" alt="pic-of-gallery-5" width="360">
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
-            </li>
-            <li>
-                <img src="./images/image_13.jpg" alt="pic-of-gallery-6" width="360">
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/image_14.jpg" alt="pic-of-gallery-7" width="360">
-                <h3>Instagram Stories Concept</h3>
-                <p>Design</p>
-            </li>
-            <li>
-                <img src="./images/image_15.jpg" alt="pic-of-gallery-8" width="360">
-                <h3>Organic Food</h3>
-                <p>Web Site</p>
-            </li>
-            <li>
-                <img src="./images/image_16.jpg" alt="pic-of-gallety-9" width="360">
-                <h3>Fresh Coffee</h3>
-                <p>Web Site</p>
-            </li>
-        </ul>
+      <h1 hidden>Potfolio</h1>
+      <ul>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Design</button></li>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+      <h2 hidden>Gallery</h2>
+      <ul>
+        <li>
+          <img src="./images/image_8.jpg" alt="pic-of-gallery-1" width="360" />
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/image_9.jpg" alt="pic-of-gallery-2" width="360" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/image_10.jpg" alt="pic-of-gallery-3" width="360" />
+          <h3>Meditaion App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/image_11.jpg" alt="pic-of-gallery-4" width="360" />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/image_12.jpg" alt="pic-of-gallery-5" width="360" />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/image_13.jpg" alt="pic-of-gallery-6" width="360" />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/image_14.jpg" alt="pic-of-gallery-7" width="360" />
+          <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/image_15.jpg" alt="pic-of-gallery-8" width="360" />
+          <h3>Organic Food</h3>
+          <p>Web Site</p>
+        </li>
+        <li>
+          <img src="./images/image_16.jpg" alt="pic-of-gallety-9" width="360" />
+          <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+        </li>
+      </ul>
     </main>
 
-    <footer>
-        <a href="/"><span>WEB</span>STUDIO</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a clas="footer-logo" href="/"><span>WEB</span>STUDIO</a>
+      <p class="footer-abstract">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
