--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
         </ul>
       </nav>
       <ul class="header-list">
-        <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="header-contact" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        <li>
+          <a class="header-contact" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header-contact" href="tel:+11(000)111-11-11"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
       </ul>
     </header>
 
@@ -112,7 +120,7 @@
     </main>
 
     <footer class="footer">
-      <a clas="footer-logo" href="/"><span>WEB</span>STUDIO</a>
+      <a class="footer-logo" href="/"><span>WEB</span>STUDIO</a>
       <p class="footer-abstract">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
