--- a/portfolio.html
+++ b/portfolio.html
@@ -15,81 +15,91 @@
   </head>
   <body>
     <header class="header">
-    <a class="header-logo" href="/"><span>WEB</span>STUDIO</a>
-    <nav>
+      <a class="header-logo" href="/"><span>WEB</span>STUDIO</a>
+      <nav>
+        <ul class="header-list">
+          <li><a class="header-link" href="">Studio</a></li>
+          <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="header-link" href="">Contacts</a></li>
+        </ul>
+      </nav>
       <ul class="header-list">
-        <li><a class="header-link" href="">Studio</a></li>
-        <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-        <li><a class="header-link" href="">Contacts</a></li>
+        <li>
+          <a class="header-contact" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header-contact" href="tel:+11(000)111-11-11"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
       </ul>
-    </nav>
-    <ul>
-      <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="header-contact" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-    </ul>
-  </header>
+    </header>
 
     <main>
       <h1 hidden>Potfolio</h1>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+      <ul class="products-list">
+        <li><button class="products-button" type="button">All</button></li>
+        <li><button class="products-button" type="button">Web Site</button></li>
+        <li><button class="products-button" type="button">App</button></li>
+        <li><button class="products-button" type="button">Design</button></li>
+        <li>
+          <button class="products-button" type="button">Marketing</button>
+        </li>
       </ul>
       <h2 hidden>Gallery</h2>
-      <ul>
+      <ul class="gallery-list">
         <li>
           <img src="./images/image_8.jpg" alt="pic-of-gallery-1" width="360" />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
+          <h3 class="gallery-title">Banking App Interface Concept</h3>
+          <p class="gallery-product">App</p>
         </li>
         <li>
           <img src="./images/image_9.jpg" alt="pic-of-gallery-2" width="360" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3 class="gallery-title">Cashless Payment</h3>
+          <p class="gallery-product">Marketing</p>
         </li>
         <li>
           <img src="./images/image_10.jpg" alt="pic-of-gallery-3" width="360" />
-          <h3>Meditaion App</h3>
-          <p>App</p>
+          <h3 class="gallery-title">Meditaion App</h3>
+          <p class="gallery-product">App</p>
         </li>
         <li>
           <img src="./images/image_11.jpg" alt="pic-of-gallery-4" width="360" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="gallery-title">Taxi Service</h3>
+          <p class="gallery-product">Marketing</p>
         </li>
         <li>
           <img src="./images/image_12.jpg" alt="pic-of-gallery-5" width="360" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="gallery-title">Screen Illustrations</h3>
+          <p class="gallery-product">Design</p>
         </li>
         <li>
           <img src="./images/image_13.jpg" alt="pic-of-gallery-6" width="360" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="gallery-title">Online Courses</h3>
+          <p class="gallery-product">Marketing</p>
         </li>
         <li>
           <img src="./images/image_14.jpg" alt="pic-of-gallery-7" width="360" />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
+          <h3 class="gallery-title">Instagram Stories Concept</h3>
+          <p class="gallery-product">Design</p>
         </li>
         <li>
           <img src="./images/image_15.jpg" alt="pic-of-gallery-8" width="360" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
+          <h3 class="gallery-title">Organic Food</h3>
+          <p class="gallery-product">Web Site</p>
         </li>
         <li>
           <img src="./images/image_16.jpg" alt="pic-of-gallety-9" width="360" />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
+          <h3 class="gallery-title">Fresh Coffee</h3>
+          <p class="gallery-product">Web Site</p>
         </li>
       </ul>
     </main>
 
     <footer class="footer">
-      <a clas="footer-logo" href="/"><span>WEB</span>STUDIO</a>
+      <a class="footer-logo" href="/"><span>WEB</span>STUDIO</a>
       <p class="footer-abstract">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
