--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -51,47 +50,47 @@
       <h2 hidden>Gallery</h2>
       <ul class="gallery-list">
         <li>
-          <img src="./images/image_8.jpg" alt="pic-of-gallery-1" width="360" />
+          <img class="gallery-image" src="./images/image_8.jpg" alt="pic-of-gallery-1" width="360">
           <h3 class="gallery-title">Banking App Interface Concept</h3>
           <p class="gallery-product">App</p>
         </li>
         <li>
-          <img src="./images/image_9.jpg" alt="pic-of-gallery-2" width="360" />
+          <img class="gallery-image" src="./images/image_9.jpg" alt="pic-of-gallery-2" width="360">
           <h3 class="gallery-title">Cashless Payment</h3>
           <p class="gallery-product">Marketing</p>
         </li>
         <li>
-          <img src="./images/image_10.jpg" alt="pic-of-gallery-3" width="360" />
+          <img class="gallery-image" src="./images/image_10.jpg" alt="pic-of-gallery-3" width="360">
           <h3 class="gallery-title">Meditaion App</h3>
           <p class="gallery-product">App</p>
         </li>
         <li>
-          <img src="./images/image_11.jpg" alt="pic-of-gallery-4" width="360" />
+          <img class="gallery-image" src="./images/image_11.jpg" alt="pic-of-gallery-4" width="360">
           <h3 class="gallery-title">Taxi Service</h3>
           <p class="gallery-product">Marketing</p>
         </li>
         <li>
-          <img src="./images/image_12.jpg" alt="pic-of-gallery-5" width="360" />
+          <img class="gallery-image" src="./images/image_12.jpg" alt="pic-of-gallery-5" width="360">
           <h3 class="gallery-title">Screen Illustrations</h3>
           <p class="gallery-product">Design</p>
         </li>
         <li>
-          <img src="./images/image_13.jpg" alt="pic-of-gallery-6" width="360" />
+          <img class="gallery-image" src="./images/image_13.jpg" alt="pic-of-gallery-6" width="360">
           <h3 class="gallery-title">Online Courses</h3>
           <p class="gallery-product">Marketing</p>
         </li>
         <li>
-          <img src="./images/image_14.jpg" alt="pic-of-gallery-7" width="360" />
+          <img class="gallery-image" src="./images/image_14.jpg" alt="pic-of-gallery-7" width="360">
           <h3 class="gallery-title">Instagram Stories Concept</h3>
           <p class="gallery-product">Design</p>
         </li>
         <li>
-          <img src="./images/image_15.jpg" alt="pic-of-gallery-8" width="360" />
+          <img class="gallery-image" src="./images/image_15.jpg" alt="pic-of-gallery-8" width="360">
           <h3 class="gallery-title">Organic Food</h3>
           <p class="gallery-product">Web Site</p>
         </li>
         <li>
-          <img src="./images/image_16.jpg" alt="pic-of-gallety-9" width="360" />
+          <img class="gallery-image" src="./images/image_16.jpg" alt="pic-of-gallety-9" width="360">
           <h3 class="gallery-title">Fresh Coffee</h3>
           <p class="gallery-product">Web Site</p>
         </li>
