--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <title>Studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -40,7 +41,7 @@
     <main>
       <!-- section-1 -->
       <section class="order">
-        <h1 class="order-title">Effective Solutions <br>for Your Business</h1>
+        <h1 class="order-title">Effective Solutions <br />for Your Business</h1>
         <button class="order-button" type="button">Order Service</button>
       </section>
       <!--section-2-->
@@ -80,13 +81,28 @@
         <h2 class="work-title">What are we doing</h2>
         <ul class="work-list">
           <li>
-            <img class="work-image" src="./images/image_1.jpg" alt="pic_1" width="360">
+            <img
+              class="work-image"
+              src="./images/image_1.jpg"
+              alt="pic_1"
+              width="360"
+            />
           </li>
           <li>
-            <img class="work-image" src="./images/image_2.jpg" alt="pic_2" width="360">
+            <img
+              class="work-image"
+              src="./images/image_2.jpg"
+              alt="pic_2"
+              width="360"
+            />
           </li>
           <li>
-            <img class="work-image" src="./images/image_3.jpg" alt="pic_3" width="360">
+            <img
+              class="work-image"
+              src="./images/image_3.jpg"
+              alt="pic_3"
+              width="360"
+            />
           </li>
         </ul>
       </section>
@@ -95,22 +111,42 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li>
-            <img class="team-avatar" src="./images/image_4.jpg" alt="mark_guererro" width="264">
+            <img
+              class="team-avatar"
+              src="./images/image_4.jpg"
+              alt="mark_guererro"
+              width="264"
+            />
             <h3 class="team-member">Mark Guerrero</h3>
             <p class="team-job">Product Designer</p>
           </li>
           <li>
-            <img class="team-avatar" src="./images/image_5.jpg" alt="tom_ford" width="264">
+            <img
+              class="team-avatar"
+              src="./images/image_5.jpg"
+              alt="tom_ford"
+              width="264"
+            />
             <h3 class="team-member">Tom Ford</h3>
             <p class="team-job">Frontend Developer</p>
           </li>
           <li>
-            <img class="team-avatar" src="./images/image_6.jpg" alt="camila_garcia" width="264">
+            <img
+              class="team-avatar"
+              src="./images/image_6.jpg"
+              alt="camila_garcia"
+              width="264"
+            />
             <h3 class="team-member">Camila Garcia</h3>
             <p class="team-job">Marketing</p>
           </li>
           <li>
-            <img class="team-avatar" src="./images/image_7.jpg" alt="daniel_wilson" width="264">
+            <img
+              class="team-avatar"
+              src="./images/image_7.jpg"
+              alt="daniel_wilson"
+              width="264"
+            />
             <h3 class="team-member">Daniel Wilson</h3>
             <p class="team-job">UI Designer</p>
           </li>
