--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,15 @@
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="/"><span>WEB</span>STUDIO</a>
+      <a class="header-logo" href="/index.html"><span>WEB</span>STUDIO</a>
       <nav>
-        <ul class="header-list">
-          <li><a class="header-link" href="">Studio</a></li>
+        <ul class="list">
+          <li><a class="header-link" href="/index.html">Studio</a></li>
           <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="header-link" href="">Contacts</a></li>
+          <li><a class="header-link" href="/">Contacts</a></li>
         </ul>
       </nav>
-      <ul class="header-list">
+      <ul class="list">
         <li>
           <a class="header-contact" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -38,109 +38,132 @@
     </header>
 
     <main>
-      <h1 hidden>Potfolio</h1>
-      <ul class="products-list">
-        <li><button class="products-button" type="button">All</button></li>
-        <li><button class="products-button" type="button">Web Site</button></li>
-        <li><button class="products-button" type="button">App</button></li>
-        <li><button class="products-button" type="button">Design</button></li>
-        <li>
-          <button class="products-button" type="button">Marketing</button>
-        </li>
-      </ul>
-      <h2 hidden>Gallery</h2>
-      <ul class="gallery-list">
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_8.jpg"
-            alt="pic-of-gallery-1"
-            width="360"
-          />
-          <h3 class="gallery-title">Banking App Interface Concept</h3>
-          <p class="gallery-product">App</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_9.jpg"
-            alt="pic-of-gallery-2"
-            width="360"
-          />
-          <h3 class="gallery-title">Cashless Payment</h3>
-          <p class="gallery-product">Marketing</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_10.jpg"
-            alt="pic-of-gallery-3"
-            width="360"
-          />
-          <h3 class="gallery-title">Meditaion App</h3>
-          <p class="gallery-product">App</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_11.jpg"
-            alt="pic-of-gallery-4"
-            width="360"
-          />
-          <h3 class="gallery-title">Taxi Service</h3>
-          <p class="gallery-product">Marketing</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_12.jpg"
-            alt="pic-of-gallery-5"
-            width="360"
-          />
-          <h3 class="gallery-title">Screen Illustrations</h3>
-          <p class="gallery-product">Design</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_13.jpg"
-            alt="pic-of-gallery-6"
-            width="360"
-          />
-          <h3 class="gallery-title">Online Courses</h3>
-          <p class="gallery-product">Marketing</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_14.jpg"
-            alt="pic-of-gallery-7"
-            width="360"
-          />
-          <h3 class="gallery-title">Instagram Stories Concept</h3>
-          <p class="gallery-product">Design</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_15.jpg"
-            alt="pic-of-gallery-8"
-            width="360"
-          />
-          <h3 class="gallery-title">Organic Food</h3>
-          <p class="gallery-product">Web Site</p>
-        </li>
-        <li>
-          <img
-            class="gallery-image"
-            src="./images/image_16.jpg"
-            alt="pic-of-gallety-9"
-            width="360"
-          />
-          <h3 class="gallery-title">Fresh Coffee</h3>
-          <p class="gallery-product">Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h1 hidden>Potfolio</h1>
+        <ul class="list">
+          <li><button class="products-button" type="button">All</button></li>
+          <li>
+            <button class="products-button" type="button">Web Site</button>
+          </li>
+          <li><button class="products-button" type="button">App</button></li>
+          <li><button class="products-button" type="button">Design</button></li>
+          <li>
+            <button class="products-button" type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul class="list">
+          <li>
+            <a class="link" href="" cl>
+              <img
+                class="gallery-image"
+                src="./images/image_8.jpg"
+                alt="banking_interface"
+                width="360"
+              />
+              <h2 class="gallery-title">Banking App Interface Concept</h2>
+              <p class="gallery-product">App</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_9.jpg"
+                alt="payment"
+                width="360"
+              />
+              <h2 class="gallery-title">Cashless Payment</h2>
+              <p class="gallery-product">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_10.jpg"
+                alt="meditation_app"
+                width="360"
+              />
+              <h2 class="gallery-title">Meditation App</h2>
+              <p class="gallery-product">App</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_11.jpg"
+                alt="taxi_service"
+                width="360"
+              />
+              <h2 class="gallery-title">Taxi Service</h2>
+              <p class="gallery-product">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_12.jpg"
+                alt="screen_illustrations"
+                width="360"
+              />
+              <h2 class="gallery-title">Screen Illustrations</h2>
+              <p class="gallery-product">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_13.jpg"
+                alt="online-courses"
+                width="360"
+              />
+              <h2 class="gallery-title">Online Courses</h2>
+              <p class="gallery-product">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_14.jpg"
+                alt="instagram_stories"
+                width="360"
+              />
+              <h2 class="gallery-title">Instagram Stories Concept</h2>
+              <p class="gallery-product">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_15.jpg"
+                alt="organic_food"
+                width="360"
+              />
+              <h2 class="gallery-title">Organic Food</h2>
+              <p class="gallery-product">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                class="gallery-image"
+                src="./images/image_16.jpg"
+                alt="fresh_coffee"
+                width="360"
+              />
+              <h2 class="gallery-title">Fresh Coffee</h2>
+              <p class="gallery-product">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
