--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="/"><span>WEB</span>STUDIO</a>
+      <a class="header-logo" href="/index.html"><span>WEB</span>STUDIO</a>
       <nav>
-        <ul class="header-list">
-          <li><a class="header-link" href="">Studio</a></li>
-          <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="header-link" href="">Contacts</a></li>
+        <ul class="list">
+          <li><a class="header-link link" href="/index.html">Studio</a></li>
+          <li>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="header-link link" href="/">Contacts</a></li>
         </ul>
       </nav>
-      <ul class="header-list">
+      <ul class="list">
         <li>
           <a class="header-contact" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -46,7 +48,7 @@
       </section>
       <!--section-2-->
       <section class="benefits">
-        <ul class="benefits-list">
+        <ul class="list">
           <li>
             <h3 class="benefits-title">Strategy</h3>
             <p class="benefits-decription">
@@ -79,7 +81,7 @@
       </section>
       <section class="work">
         <h2 class="work-title">What are we doing</h2>
-        <ul class="work-list">
+        <ul class="list">
           <li>
             <img
               class="work-image"
@@ -109,7 +111,7 @@
       <!-- section-3 -->
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="list">
           <li>
             <img
               class="team-avatar"
