--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
       <section>
         <ul class="list">
           <li>
-            <a class="link" href="" cl>
+            <a class="link" href="">
               <img
                 class="gallery-image"
                 src="./images/image_8.jpg"
